--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -585,22 +585,24 @@ background: #1a1717 !important;
 }
 
 #iframeHolder {
+  padding: 0;
+  margin: 0;
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  /*top: 0;*/
+  /*left: 0;*/
+  /*bottom: 0;*/
   height: 100%;
   width: 100%;
   border: 0;
 }
 
 .iframe-wrapper {
-  padding: 0;
+  /*padding: 0;*/
+  /*margin: auto;*/
   width: 100%;
   height: 100%;
   position: relative;
-  margin: auto;
-  top: 15%;
+  top: 75px;
   transform: translate(-50%, -50%);
 }
 
